# read-only-github

./: README.md  elm-package.json  github-backend.service  github-frontend.service  gulpfile.js  nginx.conf  package.json
backend/: README.md  backend.cabal  crontab  sample.cfg  stack.yaml
backend/src/: API.hs  Main.hs
src/: Main.elm  Project.elm  index.html  styles.css
