name:                backend
version:             0.1.0.0
synopsis:            backend for read only views of github project
description:         Please see README.md
homepage:            https://github.com/justinwhite/backend#readme
license:             BSD3
license-file:        LICENSE
author:              Justin White
maintainer:          justinwhite321@gmail.com
copyright:           2016 Elsen, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable backend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       API

  build-depends:       base
                     , aeson
                     , async
                     , bytestring
                     , containers
                     , configurator
                     , either
                     , http-types
                     , interpolatedstring-perl6
                     , lens
                     , servant
                     , servant-server
                     , text
                     , wai
                     , wai-cors
                     , warp
                     , wreq
